--- a/operateexcel/pom.xml
+++ b/operateexcel/pom.xml
@@ -93,8 +93,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
+
+
 	</dependencies>
 
 	<build>
